--- a/WeeklyStatus_Prj/packages.config
+++ b/WeeklyStatus_Prj/packages.config
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Atlassian.SDK" version="9.7.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="Google.Apis" version="1.30.0" targetFramework="net452" />
+  <package id="Google.Apis.Analytics.v3" version="1.30.0.949" targetFramework="net452" />
+  <package id="Google.Apis.Auth" version="1.30.0" targetFramework="net452" />
+  <package id="Google.Apis.Core" version="1.30.0" targetFramework="net452" />
+  <package id="Google.Apis.Sheets.v4" version="1.30.0.1061" targetFramework="net452" />
+  <package id="Google.GData.Client" version="2.2.0.0" targetFramework="net452" />
+  <package id="Google.GData.Extensions" version="2.2.0.0" targetFramework="net452" />
+  <package id="Google.GData.Spreadsheets" version="2.2.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net452" />
 </packages>
