Few More Changes

--- a/WeeklyStatus_Prj/App.config
+++ b/WeeklyStatus_Prj/App.config
@@ -17,7 +17,7 @@
     <add key="IssuesApi" value="https://jira.mtvi.com//rest/api/2/issue/" />
     <add key="JiraLogin" value="guptaram" />
     <add key="JiraPwd" value="Welcome890" />
-    <add key="DailyStatusFilterId" value="42786" />   
+    <add key="DailyStatusFilterId" value="42786" />
     <add key="WeeklyStatusFilterId" value="42815" />
     <add key="EmailFrom" value="ramraj.gupta@viacomcontractor.com" />
     <add key="EmailFromPwd" value="Viacom123" />
@@ -29,6 +29,8 @@
     <add key="SmtpHost" value="smtp.office365.com" />
     <add key="SmtpPort" value="587" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="GoogleClientId" value="913302065451-onk020mf6k1rkteqt91iiik5bmirjqsl.apps.googleusercontent.com" />
+    <add key="GoogleClientSecret" value="r9X31RRhzh4wDehf5r8cKiP7" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
