--- a/WeeklyStatus_Prj/App.config
+++ b/WeeklyStatus_Prj/App.config
@@ -16,13 +16,13 @@
     <add key="FilterApi" value="https://jira.mtvi.com/rest/api/2/filter/" />
     <add key="IssuesApi" value="https://jira.mtvi.com//rest/api/2/issue/" />
     <add key="JiraLogin" value="guptaram" />
-    <add key="JiraPwd" value="Welcome890" />
+    <add key="JiraPwd" value="Ramrajg@1515" />
     <add key="DailyStatusFilterId" value="42786" />
     <add key="WeeklyStatusFilterId" value="42815" />
     <add key="EmailFrom" value="ramraj.gupta@viacomcontractor.com" />
-    <add key="EmailFromPwd" value="Viacom123" />
-    <!--<add key="EmailTo" value="ramraj.gupta@viacomcontractor.com,Deepak.Mahanta@viacomcontractor.com,Mukri.Musaib@viacomcontractor.com,Snehal.Marathe@viacomcontractor.com"/>
-    <add key="EmailCc" value="nitin.tikhe@lntinfotech.com"/>-->
+    <add key="EmailFromPwd" value="Notinghi46" />
+    <!--<add key="EmailTo" value="Andrew.Laufer@viacomcontractor.com,Jennifer.Lively@viacom.com,olga.zekine@viacom.com"/>
+    <add key="EmailCc" value="Nitin.Tikhe@lntinfotech.com,Ramraj.Gupta@viacomcontractor.com,Nyamthulla.Mohammad@viacomcontractor.com,Snehal.Marathe@viacomcontractor.com,Umeshkumar.Patthar@viacomcontractor.com,Pradhan.Salian@viacomcontractor.com,Deepak.Mahanta@viacomcontractor.com"/>-->
     <add key="EmailTo" value="ramraj.gupta@viacomcontractor.com" />
     <add key="EmailCc" value="ramraj.gupta@viacomcontractor.com" />
     <add key="EmailFrom" value="ramraj.gupta@viacomcontractor.com" />
