Added Msg as Config

--- a/WeeklyStatus_Prj/App.config
+++ b/WeeklyStatus_Prj/App.config
@@ -28,6 +28,7 @@
     <add key="EmailFrom" value="ramraj.gupta@viacomcontractor.com" />
     <add key="SmtpHost" value="smtp.office365.com" />
     <add key="SmtpPort" value="587" />
+    <add key="Bodymsg" value="Please find the status for today." />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="GoogleClientId" value="913302065451-onk020mf6k1rkteqt91iiik5bmirjqsl.apps.googleusercontent.com" />
     <add key="GoogleClientSecret" value="r9X31RRhzh4wDehf5r8cKiP7" />
