--- a/WeeklyStatus_Prj/App.config
+++ b/WeeklyStatus_Prj/App.config
@@ -6,8 +6,8 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -16,19 +16,16 @@
     <add key="FilterApi" value="https://jira.mtvi.com/rest/api/2/filter/" />
     <add key="IssuesApi" value="https://jira.mtvi.com//rest/api/2/issue/" />
     <add key="JiraLogin" value="guptaram" />
-    <add key="JiraPwd" value="Ramrajg@1515" />
+    <add key="JiraPwd" value="Notinghi52" />
     <add key="DailyStatusFilterId" value="42786" />
     <add key="WeeklyStatusFilterId" value="42815" />
-    <add key="EmailFrom" value="ramraj.gupta@viacomcontractor.com" />
-    <add key="EmailFromPwd" value="Notinghi46" />
-    <!--<add key="EmailTo" value="Andrew.Laufer@viacomcontractor.com,Jennifer.Lively@viacom.com,olga.zekine@viacom.com"/>
-    <add key="EmailCc" value="Nitin.Tikhe@lntinfotech.com,Ramraj.Gupta@viacomcontractor.com,Nyamthulla.Mohammad@viacomcontractor.com,Snehal.Marathe@viacomcontractor.com,Umeshkumar.Patthar@viacomcontractor.com,Pradhan.Salian@viacomcontractor.com,Deepak.Mahanta@viacomcontractor.com"/>-->
-    <add key="EmailTo" value="ramraj.gupta@viacomcontractor.com" />
+    <add key="EmailFromPwd" value="Notinghi52" />
+    <add key="EmailTo" value="Deepak.Mahanta@viacomcontractor.com,Dhiraj.Mishra@viacomcontractor.com,ramraj.gupta@viacomcontractor.com" />
     <add key="EmailCc" value="ramraj.gupta@viacomcontractor.com" />
     <add key="EmailFrom" value="ramraj.gupta@viacomcontractor.com" />
     <add key="SmtpHost" value="smtp.office365.com" />
     <add key="SmtpPort" value="587" />
-    <add key="Bodymsg" value="Please find the status for today." />
+    <add key="Bodymsg" value="Please update your logs if the time count is not having 8h under your name.This will be mailed to client after 30 mins." />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="GoogleClientId" value="913302065451-onk020mf6k1rkteqt91iiik5bmirjqsl.apps.googleusercontent.com" />
     <add key="GoogleClientSecret" value="r9X31RRhzh4wDehf5r8cKiP7" />
