--- a/WeeklyStatus_Prj/JiraDailyStatus.csproj
+++ b/WeeklyStatus_Prj/JiraDailyStatus.csproj
@@ -50,6 +50,9 @@
   <PropertyGroup>
     <StartupObject>WeeklyStatus_Prj.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>DailyStatus.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Atlassian.Jira, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Atlassian.SDK.9.7.0\lib\Atlassian.Jira.dll</HintPath>
@@ -151,6 +154,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DailyStatus.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
