Added Encrptying of Password

--- a/WeeklyStatus_Prj/App.config
+++ b/WeeklyStatus_Prj/App.config
@@ -16,11 +16,11 @@
     <add key="FilterApi" value="https://jira.mtvi.com/rest/api/2/filter/" />
     <add key="IssuesApi" value="https://jira.mtvi.com//rest/api/2/issue/" />
     <add key="JiraLogin" value="guptaram" />
-    <add key="JiraPwd" value="Notinghi52" />
+    <add key="JiraPwd" value="sUag/5uGKWAS4gy8lVjDkg==" />
     <add key="DailyStatusFilterId" value="42786" />
     <add key="WeeklyStatusFilterId" value="42815" />
-    <add key="EmailFromPwd" value="Notinghi52" />
-    <add key="EmailTo" value="Deepak.Mahanta@viacomcontractor.com,Dhiraj.Mishra@viacomcontractor.com,ramraj.gupta@viacomcontractor.com" />
+    <add key="EmailFromPwd" value="sUag/5uGKWAS4gy8lVjDkg==" />
+    <add key="EmailTo" value="ramraj.gupta@viacomcontractor.com" />
     <add key="EmailCc" value="ramraj.gupta@viacomcontractor.com" />
     <add key="EmailFrom" value="ramraj.gupta@viacomcontractor.com" />
     <add key="SmtpHost" value="smtp.office365.com" />
