--- a/WeeklyStatus_Prj/JiraDailyStatus.csproj
+++ b/WeeklyStatus_Prj/JiraDailyStatus.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JiraDailyStatus</RootNamespace>
-    <AssemblyName>JiraDailyStatus</AssemblyName>
+    <AssemblyName>DailyStatus</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
